--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -804,6 +804,14 @@
                 <source>House type</source>
                 <target>Haustyp</target>
             </trans-unit>
+            <trans-unit id="label_employer" xml:space="preserve" approved="yes">
+                <source>Employer</source>
+                <target>Anbieter</target>
+            </trans-unit>
+            <trans-unit id="label_pid_be_user" xml:space="preserve" approved="yes">
+                <source>PID Employer</source>
+                <target>PID Anbieter</target>
+            </trans-unit>
             <trans-unit id="label_floor" xml:space="preserve" approved="yes">
                 <source>Floor</source>
                 <target>Etage</target>
