--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -856,6 +856,10 @@
                 <source>OpenImmo offerer ID</source>
                 <target>OpenImmo-Anbieter-ID</target>
             </trans-unit>
+            <trans-unit id="fe_users.import_folder" xml:space="preserve" approved="yes">
+                <source>Import Folder</source>
+                <target>Ordner für Import</target>
+            </trans-unit>
             <trans-unit id="fe_users.tx_realty_maximum_objects" xml:space="preserve" approved="yes">
                 <source>Maximum number of objects</source>
                 <target>Maximale Anzahl an Objekten</target>
