--- a/Resources/Private/Language/locallang_import.xlf
+++ b/Resources/Private/Language/locallang_import.xlf
@@ -67,6 +67,9 @@
             <trans-unit id="message_no_xml" xml:space="preserve">
                 <source>No XML file could be found in the ZIP archive. If there is one anyway, please ensure the name ends with '.xml'.</source>
             </trans-unit>
+            <trans-unit id="message_xml_novalid" xml:space="preserve">
+                <source>XML file can't read</source>
+            </trans-unit>
             <trans-unit id="message_successful_validation" xml:space="preserve">
                 <source>The validation proceeded successfully.</source>
             </trans-unit>
