--- a/Resources/Private/Language/de.locallang_import.xlf
+++ b/Resources/Private/Language/de.locallang_import.xlf
@@ -49,7 +49,7 @@
                 <target>Der Datensatz wurde nicht importiert, weil die Pflichtfelder nicht gesetzt sind</target>
             </trans-unit>
             <trans-unit id="message_openimmo_anid_not_matches_allowed_fe_user" xml:space="preserve" approved="yes">
-                <source>The record was not imported because the option to restrict import on registered users is activated and this record's OpenImmo ANID did not match any OpenImmo ANID of a FE user who is in the allowed user groups. The record's OpenImmo ANID was:</source>
+                <source>The record was not imported because the option to restrict import on registered users is activated and this records OpenImmo ANID did not match any OpenImmo ANID of a FE user who is in the allowed user groups. The records OpenImmo ANID was:</source>
                 <target>Daten können nicht importiert werden. Der zugewiesene Benutzer hate keine oder falsche OpenImmo-ANID.  Die richtige OpenImmo-ANID der XML-datei war:</target>
             </trans-unit>
             <trans-unit id="message_log_sent_to" xml:space="preserve" approved="yes">
@@ -69,11 +69,11 @@
                 <target>Der Ordner, der für den Import erstellt werden muss, existiert bereits in Ihrem Import-Verzeichnis. Der Datensatz kann nicht importiert werden, solange dieser Ordner existiert. Bitte entfernen Sie ihn aus dem Import-Verzeichnis.</target>
             </trans-unit>
             <trans-unit id="message_folder_creation_failed" xml:space="preserve" approved="yes">
-                <source>The folder &quot;%s&quot; could not be created. Please check your access rights.</source>
+                <source>The folder could not be created. Please check your access rights.</source>
                 <target>Der Ordner &quot;%s&quot; konnte nicht erstellt werden. Bitte überprüfen Sie Ihre Zugriffsrechte.</target>
             </trans-unit>
             <trans-unit id="message_folder_not_writable" xml:space="preserve" approved="yes">
-                <source>The folder &quot;%s&quot; has been created successfully, but is not writable. Please check your access rights.</source>
+                <source>The folder has been created successfully, but is not writable. Please check your access rights.</source>
                 <target>Der Ordner &quot;%s&quot; wurde erfolgreich erstellt, ist aber nicht beschreibbar. Bitte überprüfen Sie Ihre Zugriffsrechte.</target>
             </trans-unit>
             <trans-unit id="message_invalid_xml_path" xml:space="preserve" approved="yes">
