--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -12,6 +12,9 @@
 			<trans-unit id="flexforms_general.mode.form" xml:space="preserve">
 				<source>Search form</source>
 			</trans-unit>
+            <trans-unit id="flexforms_general.mode.startform" xml:space="preserve">
+                <source>Start form</source>
+            </trans-unit>
 			<trans-unit id="flexforms_general.mode.list" xml:space="preserve">
 				<source>List</source>
 			</trans-unit>
