tca name folder

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -858,7 +858,7 @@
             </trans-unit>
             <trans-unit id="fe_users.import_folder" xml:space="preserve" approved="yes">
                 <source>Import Folder</source>
-                <target>Ordner für Import</target>
+                <target>Ordner-Name für Import/Export :: filadmin/import/ | filadmin/realty/</target>
             </trans-unit>
             <trans-unit id="fe_users.tx_realty_maximum_objects" xml:space="preserve" approved="yes">
                 <source>Maximum number of objects</source>
