--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -37,7 +37,22 @@
 				<source>Please define the setting "storageUidImporter" in the configuration of the extension manager! The given id is the used file storage.</source>
 			</trans-unit>
 			<trans-unit id="config.import.resourceFolderImporter" xml:space="preserve">
-				<source>In which folder should the importer save files "fileadadmin/{resourceFolderImporter}" (has to exist)</source>
+				<source>Folder name for import "fileadadmin/{resourceFolderImporter}" (has to exist)</source>
+			</trans-unit>
+			<trans-unit id="config.import.resourceFolderExporter" xml:space="preserve">
+				<source>Folder name for export "fileadadmin/{resourceFolderExporter}" (has to exist)</source>
+			</trans-unit>
+			<trans-unit id="config.import.fromEmail" xml:space="preserve">
+				<source>Email used to send a message.</source>
+			</trans-unit>
+			<trans-unit id="config.import.toTestEmail" xml:space="preserve">
+				<source>Email used to send a test mail. If empty use Email for technical support read from xml-file!</source>
+			</trans-unit>
+			<trans-unit id="config.import.logEmailSendContacts" xml:space="preserve">
+				<source>Email send to all contacts from XML-file. Read from contact address per object</source>
+			</trans-unit>
+			<trans-unit id="config.import.logEmailSendTechnEmail" xml:space="preserve">
+				<source>Email send to technical support. If "import.toTestEmail" empty use this Email</source>
 			</trans-unit>
         </body>
     </file>
