config template view

--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -70,6 +70,10 @@
 				<source>Email send to technical support. If "import.toTestEmail" empty use this Email</source>
 				<target>Email an technischen Support senden. Wird benutzt wenn "import.toTestEmail" nicht gesetzt ist</target>
 			</trans-unit>
+			<trans-unit id="config.view.paginateItemsPerPage" xml:space="preserve">
+				<source>Paginate items per page</source>
+				<target>Anzahl Objekte pro Seite</target>
+			</trans-unit>
         </body>
     </file>
 </xliff>
