--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -47,13 +47,13 @@
 				<target>storageUidImporter wurde nicht angegeben.</target>
 			</trans-unit>
 			<trans-unit id="config.import.resourceFolderImporter" xml:space="preserve">
-				<source>Folder name for import "fileadadmin/{resourceFolderImporter}" (has to exist)</source>
-				<target>Ordner-Name für den Import "fileadadmin/{resourceFolderImporter}" (muss existieren)</target>
+				<source>Folder name for import "fileadmin/{resourceFolderImporter}" (has to exist)</source>
+				<target>Ordner-Name für den Import "fileadmin/{resourceFolderImporter}" (muss existieren)</target>
 			</trans-unit>
-			<trans-unit id="config.import.resourceFolderExporter" xml:space="preserve">
-				<source>Folder name for export "fileadadmin/{resourceFolderExporter}" (has to exist)</source>
-				<target>Ordner-Name für den Export "fileadadmin/{resourceFolderImporter}" (muss existieren)</target>
-			</trans-unit>
+            <trans-unit id="config.import.deleteZipsAfterImport" xml:space="preserve">
+                <source>If this option is set, ZIP archives will be deleted from the import folder after their contents have been written to the database.</source>
+                <target>Zip-Archive nach dem Import löschen</target>
+            </trans-unit>
 			<trans-unit id="config.import.fromEmail" xml:space="preserve">
 				<source>Email used to send a message.</source>
 				<target>Email die zum versenden einer Nachricht verwendet wird.</target>
