--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -37,11 +37,14 @@
 				<source>Please define the setting "storageUidImporter" in the configuration of the extension manager! The given id is the used file storage.</source>
 			</trans-unit>
 			<trans-unit id="config.import.resourceFolderImporter" xml:space="preserve">
-				<source>Folder name for import "fileadadmin/{resourceFolderImporter}" (has to exist)</source>
+				<source>Folder name for import "fileadmin/{resourceFolderImporter}" (has to exist)</source>
 			</trans-unit>
 			<trans-unit id="config.import.resourceFolderExporter" xml:space="preserve">
-				<source>Folder name for export "fileadadmin/{resourceFolderExporter}" (has to exist)</source>
+				<source>Folder name for export "fileadmin/{resourceFolderExporter}" (has to exist)</source>
 			</trans-unit>
+            <trans-unit id="config.import.deleteZipsAfterImport" xml:space="preserve">
+                <source>If this option is set, ZIP archives will be deleted from the import folder after their contents have been written to the database.</source>
+            </trans-unit>
 			<trans-unit id="config.import.fromEmail" xml:space="preserve">
 				<source>Email used to send a message.</source>
 			</trans-unit>
