--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -70,7 +70,11 @@
 				<source>Email send to technical support. If "import.toTestEmail" empty use this Email</source>
 				<target>Email an technischen Support senden. Wird benutzt wenn "import.toTestEmail" nicht gesetzt ist</target>
 			</trans-unit>
-			<trans-unit id="config.view.paginateItemsPerPage" xml:space="preserve">
+			<trans-unit id="config.view.showSelectDistricts" xml:space="preserve" approved="yes">
+				<source>Show select disticts</source>
+				<target>Auswahl für Stadtbezirke anzeigen</target>
+			</trans-unit>
+			<trans-unit id="config.view.paginateItemsPerPage" xml:space="preserve" approved="yes">
 				<source>Paginate items per page</source>
 				<target>Anzahl Objekte pro Seite</target>
 			</trans-unit>
